--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Título de la página</title>
+    <title>Cerro de Sangre</title>
     <meta name="description" content="Descripción de la página">
     <meta name="keywords" content="palabra clave 1, palabra clave 2, palabra clave 3">
     <meta name="author" content="Nombre del autor">
@@ -17,3 +17,4 @@
 <body>
   
 </body>
+</html>
