--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cerro de Sangre</title>
-    <meta name="description" content="Descripción de la página">
-    <meta name="keywords" content="palabra clave 1, palabra clave 2, palabra clave 3">
-    <meta name="author" content="Nombre del autor">
+    <meta name="description" content="Mezcal artesanal, de Santiago Matatlan, Oaxaca, elaborado con Agave Espadin.">
+    <meta name="keywords" content="mezcal, Santiago Matatlan, mezcal artesanal, mezcal espadin, agave espadin de Oaxaca">
+    <meta name="author" content="Mezcal Cerro de Sangre">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="URL_canónica_de_la_página">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://cerrodesangre.com">
+    <link rel="stylesheet" href="/assets/estilos.css">
     <script src="script.js" defer></script>
 </head>
 <body>
