ajustes fondo y nombre

--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cerro de Sangre</title>
+    <link rel="icon" href="/assets/cerro.ico" type="image/x-icon">
     <meta name="description" content="Mezcal artesanal, de Santiago Matatlan, Oaxaca, elaborado con Agave Espadin.">
     <meta name="keywords" content="mezcal, Santiago Matatlan, mezcal artesanal, mezcal espadin, agave espadin de Oaxaca">
     <meta name="author" content="Mezcal Cerro de Sangre">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <link rel="canonical" href="https://cerrodesangre.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/estilos.css">
 
 </head>
 <body>
     <div class="cerro"></div>
+    <h1>cerro de sangre</h1>
+    
 </body>
 </html>
