--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cerro de Sangre</title>
-    <link rel="icon" href="/assets/cerro.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/cerro.png" type="image/x-icon">
     <meta name="description" content="Mezcal artesanal, de Santiago Matatlan, Oaxaca, elaborado con Agave Espadin.">
     <meta name="keywords" content="mezcal, Santiago Matatlan, mezcal artesanal, mezcal espadin, agave espadin de Oaxaca">
     <meta name="author" content="Mezcal Cerro de Sangre">
